<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    >

    <ProgressBar
        android:id="@+id/login_progress" style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />
    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/login"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="25dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/HHLRG"
                android:textColor="#FFF"
                android:gravity="center"
                android:layout_marginTop="35dp"
                android:textSize="28dp" />

            <EditText
                android:id="@+id/tvLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/USERNAME"
                android:padding="10dp"
                android:background="#FFF"
                android:layout_marginTop="30dp"
                android:singleLine="true"
                />


            <EditText
                android:id="@+id/tvPassword"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:hint="@string/PASSWORD"
                android:layout_marginTop="25dp"
                android:background="#FFF"
                android:singleLine="true"
                />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="200dp"
                android:layout_gravity="center"
                android:layout_height="40dp"
                android:text="@string/LOGIN"
                android:textSize="23dp"
                android:textColor="#FFF"
                android:layout_marginTop="20dp"
                android:background="#dcac01"/>

            <Button
                android:id="@+id/btnAbout"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:text="@string/About"
                android:textColor="#FFF"
                android:layout_marginTop="20dp"
                android:textSize="20dp"
                android:layout_marginBottom="20dp"/>

        </LinearLayout>

    </ScrollView>




</LinearLayout>